k8s/mysql_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s.web.com/name: db
  template:
    metadata:
      labels:
        k8s.web.com/name: db
    spec:
      containers:
      - name: db
        image: 192.168.31.138:5000/mysql:local.5.7
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        ports:
        - containerPort: 3306
          name: db
          protocol: TCP
        volumeMounts:
        #   - mountPath: /var/lib/mysql
        #     name: data
          - mountPath: /etc/mysql/conf.d/mysql_custom.cnf
            name: configurations
            subPath: mysql_custom.cnf
          - mountPath: /docker-entrypoint-initdb.d/init.sql
            name: configurations
            subPath: init.sql
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          # defaultMode: 420
          name: mysql-cm
        name: configurations
      # - name: data
      #   persistentVolumeClaim:
      #     claimName: db
