k8s/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.web.com/name: web
  name: web
spec:
  selector:
    k8s.web.com/name: web
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 7777
  type: ClusterIP
