k8s/test.yaml
#资源的版本的版本:kubectl explain deployment 查看所有版本 ：kubectl api-versions
apiVersion: apps/v1
#当前资源：Deployment，查看 所有资源: kubectl api-resources
kind: Deployment
metadata:
  labels:
    #这里就是定义Deployment的标签，在Service中使用，就和JS中的选择器一样，可以有多个
    k8s.web.com/name: web
  name: web
spec:
  #Deployment的选择器，用来选择template，
  selector:
    matchLabels: 
      #这个和下面的template的labels一致，来选择template
      k8s.web.com/name: web
  template:
    metadata:
      labels:
        #定义pod的label
        k8s.web.com/name: web
    spec:
      #定义容器，这里容器可以是多个，也就是1个pod对应多个容器
      containers:
        - image: 192.168.31.138:5000/jlp_web:1.1
          imagePullPolicy: Always
          name: web
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.web.com/name: web
  name: web
spec:
  selector:
    k8s.web.com/name: web
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s.web.com/name: web
  name: web
spec:
  rules:
    - host: www.web.com
      http:
          paths:
            - backend:
                serviceName: web
                servicePort: 80
              path: /
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      k8s.web.com/name: db
  template:
    metadata:
      labels:
        k8s.web.com/name: db
    spec:
      containers:
      - name: db
        image: mysql:5.7.30
        resources:
          limits:
            memory: 1Gi
            cpu: "2"
        ports:
        - containerPort: 3306
          name: db
          protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: data
          - mountPath: /etc/mysql/conf.d/mysql_custom.cnf
            name: configurations
            subPath: mysql_custom.cnf
          - mountPath: /docker-entrypoint-initdb.d/init.sql
            name: configurations
            subPath: init.sql
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: mysql-cm
        name: configurations
      - name: data
        persistentVolumeClaim:
          claimName: db
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s.web.com/name: db
  name: db
spec:
  selector:
    k8s.web.com/name: db
  ports:
  - port: 3306
    targetPort: 3306
    name: db
    protocol: TCP
